--- a/paginas/hitoshistoricos.html
+++ b/paginas/hitoshistoricos.html
@@ -58,20 +58,20 @@
             <div class="la-sexta container-fluid animate__animated animate__zoomIn">
                 <div class="row">
                     <h2>La Sexta Libertadores</h2>
-                    <div class="col-lg-6">
+                    <div class="col-lg-6 col-12 col-md-12">
                         <p class="fs-3">Bajo la conducción de Miguel Russo,el año comenzó con una bendición. Tras cuatro años y medio en Europa, Juan Román Riquelme volvió en su máxima plenitud. Fue un regalo de seis meses que sirvió para levantar otra Copa Libertadores. Aquel equipo juntó futbolistas de botines sensibles (Banega, Riquelme, Palacio) y con un nivel superlativo de Román que se paseó por el continente con un fútbol de alto vuelo. En la final, vapuleó a Gremio de Brasil con un global de 5-0. En diciembre, sin embargo, apareció una tristeza. Sin Riquelme (debió regresar a Villarreal de España), el equipo cayó en la final del Mundial de Clubes contra Milan por 4-2 (goles de Palacio y Ambrosini, en contra) y así los italianos se tomaron revancha de la derrota de 2003. Aquel partido significó el adiós de Miguel Russo.</p>
                     </div>
-                    <div class="d-flex justify-content-center col-lg-6">
+                    <div class="d-flex justify-content-center col-lg-6 col-12 col-md-12">
                         <div id="carouselExampleFade" class="carousel slide carousel-fade">
                             <div class="carousel-inner">
                               <div class="carousel-item active">
-                                <img src="../medios/1920px x 1080px.png" class="d-block w-100" alt="roman">
+                                <img src="../medios/1920px x 1080px.png" alt="roman">
                               </div>
                               <div class="carousel-item">
-                                <img src="../medios/1920px x 1080px (2).png" class="d-block w-100" alt="equipo">
+                                <img src="../medios/1920px x 1080px (2).png" alt="equipo">
                               </div>
                               <div class="carousel-item">
-                                <img src="../medios/1920px x 1080px (1).png" class="d-block w-100" alt="roman-y-martin">
+                                <img src="../medios/1920px x 1080px (1).png" alt="roman-y-martin">
                               </div>
                             </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
@@ -92,8 +92,8 @@
         <div class="intercontinental container-fluid">
             <div class="row" data-aos="flip-up" >
                 <h2>Intercontinental 2003</h2>
-                <div class="d-flex justify-content-center col-lg-6">   
-                <div id="carouselExampleIndicators" class="carousel slide mb-3">
+                <div class="d-flex justify-content-center col-lg-6 col-12 col-md-12">   
+                <div id="carouselExampleIndicators" class="carousel slide">
                     <div class="carousel-indicators">
                       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -101,13 +101,13 @@
                     </div>
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img src="../medios/carrusel (1).png" class="d-block w-100" alt="equipo">
+                        <img src="../medios/carrusel (1).png" class="d-block" alt="equipo">
                       </div>
                       <div class="carousel-item">
-                        <img src="../medios/carrusel (2).png" class="d-block w-100" alt="battaglia">
+                        <img src="../medios/carrusel (2).png" class="d-block" alt="battaglia">
                       </div>
                       <div class="carousel-item">
-                        <img src="../medios/carrusel.png" class="d-block w-100" alt="tevez">
+                        <img src="../medios/carrusel.png" class="d-block" alt="tevez">
                       </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -120,7 +120,7 @@
                     </button>
                   </div>
               </div>
-              <div class="col-lg-6 text-right fs-3">
+              <div class="col-lg-6 col-12 col-md-12 text-right fs-3">
                <p>Sin el aura de Riquelme, pero con la eléctrica aparición de Carlos Tevez, Boca deslumbró en la Copa Libertadores y en la final apabulló a Santos, de Brasil, con un global de 5-1. Los últimos siete partidos los ganó de manera consecutiva, tras un traspié en la ida de los octavos de final contra Paysandú de Brasil. En la segunda parte del año tampoco habría relajación. Y se repetiría la fórmula de 2000. Hubo conquista del campeonato local con una performance estupenda (11 triunfos, 6 empates y 2 derrotas) y el aporte de Fabián Vargas y el brasileño Pedro Iarley. Y el 14 de diciembre el segundo ciclo del Virrey alcanzaría el éxtasis total. Otra vez en Japón, y ante un poderoso como el Milan de Italia, se erigió en campeón del mundo. Luego del 1-1 en los 120 minutos (gol de Matías Donnet), Roberto Abbondanzieri se recibió de ídolo en los penales. Le atajó a Pirlo y a Costacurta (Seedorf desvió uno) y Boca se consagró. Otro año increíble. De nuevo, Tokio a sus pies.</p>
               </div>
             </div>
