--- a/paginas/plantel2023.html
+++ b/paginas/plantel2023.html
@@ -64,7 +64,7 @@
                             <div class="col-6 col-md-6 col-lg-3">
                                 <div class="card romero">
                                     <img src="../medios/romeroo.jpg" class="card-img-top" alt="romero">
-                                    <div class="card-body d-flex flex-column mb-1 justify-content-center align-items-center">
+                                    <div class="card-body d-flex flex-column justify-content-center align-items-center">
                                         <p>Sergio Romero</p>
                                         <p>Arquero</p>
                                     </div>
@@ -73,7 +73,7 @@
                             <div class="col-6 col-md-6 col-lg-3">
                                 <div class="card langoni">
                                     <img src="../medios/langoniperfil.jpg" class="card-img-top" alt="langoni">
-                                    <div class="card-body d-flex flex-column mb-1 justify-content-center align-items-center">
+                                    <div class="card-body d-flex flex-column justify-content-center align-items-center">
                                        <p>Luca Langoni</p>
                                        <p>Delantero</p>
                                     </div>
@@ -82,7 +82,7 @@
                             <div class="col-6 col-md-6 col-lg-3">
                                 <div class="card benedetto">
                                     <img src="../medios/benedetto.jpg" class="card-img-top" alt="benedetto">
-                                    <div class="card-body d-flex flex-column mb-1 justify-content-center align-items-center">
+                                    <div class="card-body d-flex flex-column justify-content-center align-items-center">
                                         <p>Dario Benedetto</p>
                                         <p>Delantero</p>
                                     </div>
@@ -91,7 +91,7 @@
                             <div class="col-6 col-md-6 col-lg-3">
                                 <div class="card oscar">
                                     <img src="../medios/romeroperfil.jpg" class="card-img-top" alt="oscar-romero">
-                                    <div class="card-body d-flex flex-column mb-1 justify-content-center align-items-center">
+                                    <div class="card-body d-flex flex-column justify-content-center align-items-center">
                                         <p>Oscar Romero</p>
                                         <p>Mediocampista</p>
                                     </div>
@@ -102,7 +102,7 @@
                           <div class="col-6 col-md-6 col-lg-3">
                             <div class="card fernandez">
                                 <img src="../medios/fernandezperfil.jpg" class="card-img-top" alt="fernandez">
-                                <div class="card-body d-flex flex-column mb-1 justify-content-center align-items-center">
+                                <div class="card-body d-flex flex-column justify-content-center align-items-center">
                                    <p>Ezequiel Fernandez</p>
                                    <p>Mediocampista</p>
                                 </div>
@@ -111,7 +111,7 @@
                           <div class="col-6 col-md-6 col-lg-3">
                             <div class="card varela">
                                 <img src="../medios/varelaperfil.jpg" class="card-img-top" alt="varela">
-                                <div class="card-body d-flex flex-column mb-1 justify-content-center align-items-center">
+                                <div class="card-body d-flex flex-column justify-content-center align-items-center">
                                     <p>Alan Varela</p>
                                     <p>Mediocampista</p>
                                 </div>
@@ -120,7 +120,7 @@
                           <div class="col-6 col-md-6 col-lg-3">
                             <div class="card weigandt">
                                 <img src="../medios/weigandtperfil.jpg" class="card-img-top" alt="weigandt">
-                                <div class="card-body d-flex flex-column mb-1 justify-content-center align-items-center">
+                                <div class="card-body d-flex flex-column justify-content-center align-items-center">
                                    <p>Marcelo Weigandt</p>
                                    <p>Defensor</p>
                                 </div>
@@ -129,7 +129,7 @@
                           <div class="col-6 col-md-6 col-lg-3">
                             <div class="card cristian">
                                 <img src="../medios/medina.jpg" class="card-img-top" alt="medina">
-                                <div class="card-body d-flex flex-column mb-1 justify-content-center align-items-center">
+                                <div class="card-body d-flex flex-column justify-content-center align-items-center">
                                     <p>Cristian Medina</p>
                                     <p>Mediocampista</p>
                                 </div>
@@ -140,7 +140,7 @@
                             <div class="col-6 col-md-6 col-lg-3">
                                 <div class="card figal">
                                     <img src="../medios/figal.jpg" class="card-img-top" alt="figal">
-                                    <div class="card-body d-flex flex-column mb-1 justify-content-center align-items-center">
+                                    <div class="card-body d-flex flex-column justify-content-center align-items-center">
                                         <p>Nicolas Figal</p>
                                         <p>Defensor</p>
                                     </div>
@@ -149,7 +149,7 @@
                             <div class="col-6 col-md-6 col-lg-3">
                                 <div class="card marcos">
                                     <img src="../medios/rojoperfil.jpg" class="card-img-top" alt="rojo">
-                                    <div class="card-body d-flex flex-column mb-1 justify-content-center align-items-center">
+                                    <div class="card-body d-flex flex-column justify-content-center align-items-center">
                                        <p>Marcos Rojo</p>
                                        <p>Defensor</p>
                                     </div>
