arregle las cards

--- a/index.html
+++ b/index.html
@@ -85,35 +85,38 @@
                     </div>
                 </div>
                 <!-- cards -->
-                <div class="boca-hoy">
-                    <div class="card fabra">
-                            <img src="./medios/not1.png" alt="pereiraVsBoca">
-                            <div class="card-body">
-                                <p>Deportivo Pereira golpeo a Boca en Colombia</p>
+               <div class="boca-hoy">
+                        <div class="row">
+                            <div class="col-12 col-md-6 col-lg-4">
+                                <div class="card">
+                                    <img src="./medios/not1.png" alt="bocaVsPereira">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Deportivo Pereira golpeo a Boca en Venezuela</h5>
+                                        <a class="btn" href="#">Ver mas</a>
+                                    </div>
+                                </div>
                             </div>
-                            <div>
-                                <a class="btn" href="#">Ver Mas</a>
+                            <div class="col-12 col-md-6 col-lg-4">
+                                <div class="card">
+                                    <img src="./medios/not1 (1).png" alt="marcos-rojo">
+                                    <div class="card-body">
+                                        <h5 class="card-title">¿Cuando vuelve Rojo? La incognita de los hinchas</h5>
+                                        <a class="btn" href="#">Ver mas</a>
+                                    </div>
+                                </div>
                             </div>
-                    </div> 
-                    <div class="card marcos-rojo">
-                        <img src="./medios/not1 (1).png" alt="marcos-rojo">
-                        <div class="card-body">
-                            <p>Rojo se entrena con el grupo y volvera a jugar con la reserva</p>
-                        </div>
-                        <div>
-                            <a class="btn" href="#">Ver Mas</a>
-                        </div>
+                            <div class="col-12 col-md-6 col-lg-4">
+                                <div class="card">
+                                    <img src="./medios/not1 (2).png" alt="cristian-medina">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Los excelentes numero de medina en el Xeneize</h5>
+                                        <button class="btn">Ver mas</button>
+                                    </div>
+                                </div>
+                            </div>
                     </div>
-                    <div class="card medina">
-                        <img src="./medios/not1 (2).png" alt="medina">
-                        <div class="card-body">
-                            <p>El gran presente de Crsitian Medina vuelve loco a los hinchas Xeneizes</p>
-                        </div>
-                        <div>
-                            <a class="btn" href="#">Ver Mas</a>
-                        </div>
-                    </div>     
-                </div>  
+                   
+                </div>
         </section>
     </main>
     <!-- footer -->
