--- a/paginas/hitoshistoricos.html
+++ b/paginas/hitoshistoricos.html
@@ -61,7 +61,7 @@
                     <div class="col-lg-6 col-12 col-md-12">
                         <p class="fs-3">Bajo la conducción de Miguel Russo,el año comenzó con una bendición. Tras cuatro años y medio en Europa, Juan Román Riquelme volvió en su máxima plenitud. Fue un regalo de seis meses que sirvió para levantar otra Copa Libertadores. Aquel equipo juntó futbolistas de botines sensibles (Banega, Riquelme, Palacio) y con un nivel superlativo de Román que se paseó por el continente con un fútbol de alto vuelo. En la final, vapuleó a Gremio de Brasil con un global de 5-0. En diciembre, sin embargo, apareció una tristeza. Sin Riquelme (debió regresar a Villarreal de España), el equipo cayó en la final del Mundial de Clubes contra Milan por 4-2 (goles de Palacio y Ambrosini, en contra) y así los italianos se tomaron revancha de la derrota de 2003. Aquel partido significó el adiós de Miguel Russo.</p>
                     </div>
-                    <div class="d-flex justify-content-center col-lg-6 col-12 col-md-12">
+                    <div class="col-lg-6 col-12 col-md-12">
                         <div id="carouselExampleFade" class="carousel slide carousel-fade">
                             <div class="carousel-inner">
                               <div class="carousel-item active">
@@ -92,7 +92,7 @@
         <div class="intercontinental container-fluid">
             <div class="row" data-aos="flip-up" >
                 <h2>Intercontinental 2003</h2>
-                <div class="d-flex justify-content-center col-lg-6 col-12 col-md-12">   
+                <div class="col-lg-6 col-12 col-md-12">   
                 <div id="carouselExampleIndicators" class="carousel slide">
                     <div class="carousel-indicators">
                       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
