--- a/paginas/plantel2023.html
+++ b/paginas/plantel2023.html
@@ -51,8 +51,8 @@
         <!-- banner -->
         <section>
             <div class="banner d-flex align-items-center justify-content-center">
-                <h1 class="jugadores animate__animated animate__fadeInRight">Plantel-Primera Division</h1>
-              </div>
+                <h1 class="animate__animated animate__fadeInRight">Plantel-Primera Division</h1>
+            </div>
         </section>
         <!-- jugadores -->
         <section class="jugadores animate__animated animate__fadeInRight">
@@ -62,96 +62,96 @@
                     <div>
                         <div class="row espacios">
                             <div class="col-6 col-md-6 col-lg-3">
-                                <div class="card romero">
-                                    <img src="../medios/romeroo.jpg" class="card-img-top" alt="romero">
-                                    <div class="card-body d-flex flex-column justify-content-center align-items-center">
-                                        <p>Sergio Romero</p>
+                                <div class="card">
+                                    <img src="../medios/romeroo.jpg" alt="sergio-romero">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Sergio Romero</h5>
                                         <p>Arquero</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-6 col-md-6 col-lg-3">
-                                <div class="card langoni">
-                                    <img src="../medios/langoniperfil.jpg" class="card-img-top" alt="langoni">
-                                    <div class="card-body d-flex flex-column justify-content-center align-items-center">
-                                       <p>Luca Langoni</p>
-                                       <p>Delantero</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-6 col-md-6 col-lg-3">
-                                <div class="card benedetto">
-                                    <img src="../medios/benedetto.jpg" class="card-img-top" alt="benedetto">
-                                    <div class="card-body d-flex flex-column justify-content-center align-items-center">
-                                        <p>Dario Benedetto</p>
+                                <div class="card">
+                                    <img src="../medios/langoniperfil.jpg" alt="luca-langoni">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Luca Langoni</h5>
                                         <p>Delantero</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-6 col-md-6 col-lg-3">
-                                <div class="card oscar">
-                                    <img src="../medios/romeroperfil.jpg" class="card-img-top" alt="oscar-romero">
-                                    <div class="card-body d-flex flex-column justify-content-center align-items-center">
-                                        <p>Oscar Romero</p>
+                                <div class="card">
+                                    <img src="../medios/benedetto.jpg" alt="dario-benedetto">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Dario Benedetto</h5>
+                                        <p>Delantero</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-6 col-md-6 col-lg-3">
+                                <div class="card">
+                                    <img src="../medios/rojoperfil.jpg" alt="oscar-romero">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Oscar Romero</h5>
                                         <p>Mediocampista</p>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="row espacios">
-                          <div class="col-6 col-md-6 col-lg-3">
-                            <div class="card fernandez">
-                                <img src="../medios/fernandezperfil.jpg" class="card-img-top" alt="fernandez">
-                                <div class="card-body d-flex flex-column justify-content-center align-items-center">
-                                   <p>Ezequiel Fernandez</p>
-                                   <p>Mediocampista</p>
-                                </div>
-                            </div>
-                          </div>
-                          <div class="col-6 col-md-6 col-lg-3">
-                            <div class="card varela">
-                                <img src="../medios/varelaperfil.jpg" class="card-img-top" alt="varela">
-                                <div class="card-body d-flex flex-column justify-content-center align-items-center">
-                                    <p>Alan Varela</p>
-                                    <p>Mediocampista</p>
-                                </div>
-                            </div>
-                          </div>
-                          <div class="col-6 col-md-6 col-lg-3">
-                            <div class="card weigandt">
-                                <img src="../medios/weigandtperfil.jpg" class="card-img-top" alt="weigandt">
-                                <div class="card-body d-flex flex-column justify-content-center align-items-center">
-                                   <p>Marcelo Weigandt</p>
-                                   <p>Defensor</p>
-                                </div>
-                            </div>
-                          </div>
-                          <div class="col-6 col-md-6 col-lg-3">
-                            <div class="card cristian">
-                                <img src="../medios/medina.jpg" class="card-img-top" alt="medina">
-                                <div class="card-body d-flex flex-column justify-content-center align-items-center">
-                                    <p>Cristian Medina</p>
-                                    <p>Mediocampista</p>
-                                </div>
-                            </div>
-                          </div>
-                        </div>
-                        <div class="row espacios">
                             <div class="col-6 col-md-6 col-lg-3">
-                                <div class="card figal">
-                                    <img src="../medios/figal.jpg" class="card-img-top" alt="figal">
-                                    <div class="card-body d-flex flex-column justify-content-center align-items-center">
-                                        <p>Nicolas Figal</p>
+                                <div class="card">
+                                    <img src="../medios/fernandezperfil.jpg" alt="equi-fernandez">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Ezequiel Fernandez</h5>
+                                        <p>Mediocampista</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-6 col-md-6 col-lg-3">
+                                <div class="card">
+                                    <img src="../medios/varelaperfil.jpg" alt="alan-varela">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Alan Varela</h5>
+                                        <p>Mediocampista</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-6 col-md-6 col-lg-3">
+                                <div class="card">
+                                    <img src="../medios/weigandtperfil.jpg" alt="chelo-weigandt">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Marcelo Weigandt</h5>
                                         <p>Defensor</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-6 col-md-6 col-lg-3">
-                                <div class="card marcos">
-                                    <img src="../medios/rojoperfil.jpg" class="card-img-top" alt="rojo">
-                                    <div class="card-body d-flex flex-column justify-content-center align-items-center">
-                                       <p>Marcos Rojo</p>
-                                       <p>Defensor</p>
+                                <div class="card">
+                                    <img src="../medios/medina.jpg" alt="cristian-medina">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Cristian Medina</h5>
+                                        <p>Mediocampista</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row espacios">
+                            <div class="col-6 col-md-6 col-lg-3">
+                                <div class="card">
+                                    <img src="../medios/figal.jpg" alt="nicolas-figal">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Nicolas Figal</h5>
+                                        <p>Defensor</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-6 col-md-6 col-lg-3">
+                                <div class="card">
+                                    <img src="../medios/rojoperfil.jpg" alt="marcos-rojo">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Marcos Rojo</h5>
+                                        <p>Defensor</p>
                                     </div>
                                 </div>
                             </div>
